--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,27 @@
+
+
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.9.21"
+}
 apply plugin: "java"
 
-sourceCompatibility = 1.6
+sourceCompatibility = 17
 
 dependencies {
-    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib-common
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-common:1.9.21")
+
+    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
+
+    implementation("org.apache.commons:commons-math3:3.6.1")
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+}
+
+compileKotlin {
+    kotlinOptions.javaParameters = true
+    kotlinOptions.jvmTarget = "17"
 }
 
 sourceSets.main.java.srcDirs = [ "src/" ]
