--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,11 +1,11 @@
 
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.9.21"
+    id "org.jetbrains.kotlin.jvm" version "1.9.24"
 }
 apply plugin: "java"
 
-sourceCompatibility = 17
+sourceCompatibility = 1.8
 
 dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
@@ -25,7 +25,11 @@ dependencies {
 
 compileKotlin {
     kotlinOptions.javaParameters = true
-    kotlinOptions.jvmTarget = "17"
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.INHERIT
 }
 
 sourceSets.main.java.srcDirs = [ "src/" ]
