--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -9,7 +9,7 @@ java {
     sourceSets.main.resources.srcDirs = ["../assets"]
 }
 
-project.ext.mainClassName = "com.badlogicgames.superjumper.desktop.DesktopLauncher"
+project.ext.mainClassName = "com.badlogicgames.waranimationmaker.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../assets");
 
 dependencies {
