--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation("org.apache.commons:commons-math3:3.6.1")
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
 }
 
 compileKotlin {
