Added proper dependency for FreeTypeFont

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ allprojects {
     ext {
         appName = "Super Jumper"
     }
-    
+
     repositories {
         mavenLocal()
         mavenCentral()
@@ -56,21 +56,28 @@ allprojects {
 
 project(":core") {
     apply plugin: "java"
-    
+    apply plugin: 'java-library'
+
     dependencies {
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     }
 }
 
 project(":desktop") {
     apply plugin: "java"
+    apply plugin: 'java-library'
 
     dependencies {
         implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     }
 }
 
 tasks.eclipse.doLast {
-	delete ".project"
+    delete ".project"
 }
