Refactored InputElement to be a general input element, not just text input box Added SelectBoxInput, is drop down menu Added TextInput, is text box input Changed unit creation: now user enters unit creation mode by pressing the U key, selects country from drop down menu, and clicks the screen Made country of a unit an editable property Made choices of country and unit type based on the files in the assets folder

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         json = new JsonSlurper().parseText(versionFile.text)
     } else throw new GradleException("Unable to retrieve latest versions, please check your internet connection")
 
+
     ext {
         gdxVersion = json.libgdxRelease
         roboVMVersion = json.robovmVersion
@@ -40,10 +41,15 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.wisepersist:gwt-gradle-plugin:$gwtGradleVersion"
-        classpath "com.android.tools.build:gradle:$androidGradleToolsVersion"
-        classpath "com.mobidevelop.robovm:robovm-gradle-plugin:$roboVMGradleVersion"
+        //classpath "org.wisepersist:gwt-gradle-plugin:$gwtGradleVersion"
+        classpath 'org.codehaus.groovy:groovy-json:3.0.9'
+        //classpath "com.android.tools.build:gradle:$androidGradleToolsVersion"
+        //classpath "com.mobidevelop.robovm:robovm-gradle-plugin:$roboVMGradleVersion"
     }
+}
+
+plugins {
+    id 'java'
 }
 
 allprojects {
