--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
         gwtPluginVersion="1.1.29"
         gdxGempLibVersion="9361b54cd7"
         gameJoltversion="0.0.5"
+        shapedrawerVersion = '2.5.0'
     }
 
     repositories {
@@ -65,6 +66,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
+        maven { url 'https://jitpack.io' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
